# atlas-runtime

./: .gitignore  README.md  TESTING.md  pyproject.toml
docs/: OPEN_GAPS.md  VERIFIED_CAPABILITIES.md
src/atlas_runtime/: cli.py
src/atlas_runtime/core/: __init__.py  events.py  runtime.py
src/atlas_runtime/mcp/: __init__.py  __main__.py  server.py  state.py
src/atlas_runtime/platform/: adapters.py  agents.py  backends.py  loop.py  tools.py
src/atlas_runtime/ui/: __init__.py  server.py  state.py
src/atlas_runtime/ui/static/: app.js  index.html  styles.css
tests/: test_cli.py  test_demo.py  test_events.py  test_platform.py  test_platform_cli.py  test_ui.py
tests/mcp/: test_server.py
