[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-runtime"
version = "0.2.0"
description = "Governed autonomous runtime wrapper with truthful validation and event replay."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Ron Blake + Codex"}]
license = {text = "MIT"}
dependencies = []
keywords = ["agents", "runtime", "mcp", "event-sourcing", "verification"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
atlas = "atlas_runtime.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --basetemp=.pytest-tmp"
testpaths = ["tests"]


